# SSGifier

./: .clang-tidy  .gitignore  ArgumentQueue.cpp  ArgumentQueue.h  CONTRIBUTING.md  FileProcessor.cpp  FileProcessor.h  License.md  MessagePrinter.cpp  MessagePrinter.h  README.md  Utils.h  conanbuildinfo.gcc  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  config.json  format.sh  linter.bat  main.cpp  test.bat  test.sh
Project1/: ArgumentQueue.cpp  ArgumentQueue.h  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  Utils.h  a.out  main.cpp  test.md  tester
package/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  SSGifier.sln  SSGifier.vcxproj  SSGifier.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  conanbuildinfo.cmake  conanfile.py  graph_info.json
package/SSGifier.dir/Release/: SSGifier.exe.recipe
package/SSGifier.dir/Release/SSGifier.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
package/src/: ArgumentQueue.cpp  ArgumentQueue.h  FileProcessor.cpp  FileProcessor.h  MessagePrinter.cpp  MessagePrinter.h  Utils.cpp  Utils.h  main.cpp
package/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
package/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
package/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
package/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
(+28 files in other folders)
